// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Add modal Add modal with error 1`] = `
<div
  data-testid="add-modal"
>
  <div
    class="reusableModal"
    data-testid="space-around-modal"
  >
    <div
      class="reusableModal__content"
    >
      <div
        class="modal"
      >
        <span
          class="modal__item"
        >
          Bitcoin
        </span>
        <input
          class="modal__item"
          type="number"
        />
        <div
          style="color: red;"
        >
          Incorrect value
        </div>
        <span
          class="modal__item"
        >
          Price: 
        </span>
        <div
          class="button"
        >
          Add
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Add modal Add modal without error 1`] = `
<div
  data-testid="add-modal"
>
  <div
    class="reusableModal"
    data-testid="space-around-modal"
  >
    <div
      class="reusableModal__content"
    >
      <div
        class="modal"
      >
        <span
          class="modal__item"
        >
          Bitcoin
        </span>
        <input
          class="modal__item"
          type="number"
        />
        <span
          class="modal__item"
        >
          Price: 
        </span>
        <div
          class="button"
        >
          Add
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Add modal with error 1`] = `
<div
  data-testid="add-modal"
>
  <div
    class="reusableModal"
    data-testid="space-around-modal"
  >
    <div
      class="reusableModal__content"
    >
      <div
        class="modal"
      >
        <span
          class="modal__item"
        >
          Bitcoin
        </span>
        <input
          class="modal__item"
          type="number"
        />
        <div
          style="color: red;"
        >
          Incorrect value
        </div>
        <span
          class="modal__item"
        >
          Price: 
        </span>
        <div
          class="button"
        >
          Add
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Add modal without error 1`] = `
<div
  data-testid="add-modal"
>
  <div
    class="reusableModal"
    data-testid="space-around-modal"
  >
    <div
      class="reusableModal__content"
    >
      <div
        class="modal"
      >
        <span
          class="modal__item"
        >
          Bitcoin
        </span>
        <input
          class="modal__item"
          type="number"
        />
        <span
          class="modal__item"
        >
          Price: 
        </span>
        <div
          class="button"
        >
          Add
        </div>
      </div>
    </div>
  </div>
</div>
`;
